csv's, mail templates

--- a/KoketSite/testNewOrderMail.html
+++ b/KoketSite/testNewOrderMail.html
@@ -35,7 +35,7 @@
 
                         <p>Orderbevestiging:</p>
 
-                        <h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px; ">Uw bestelling #{{var order.increment_id}} <small>(geplaatst op {{var order.getCreatedAtFormated('long')}})</small></h3>
+                        <h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px; ">Uw bestelling {{var order.increment_id}} <small>(geplaatst op {{var order.getCreatedAtFormated('long')}})</small></h3>
                         <table cellspacing="0" cellpadding="0" border="0" width="100%">
                             <thead>
                             <tr>
