install Fooman Speedster module, to speed up site by minifying and combining all css and js files Therefor, ajax.js and ajaxwichlist.js  was removed from automatic loading ad is now loaded from the backend, by adding it to the custom layout

--- a/KoketSite/tmp.html
+++ b/KoketSite/tmp.html
@@ -1,9 +1,273 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+        "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-    <title></title>
+    <title>Kokette Katinka - Kralen, Stoffen en Juwelen</title>
+    <meta name="description" content="Kokette Katinka verkoopt stoffen, kralen en juwelen.
+Je vindt Kokette Katinka zowel online als via de winkel in Antwerpen centrum." />
+    <meta name="keywords" content="Kokette Katinka, stoffen, kralen, juwelen, Antwerpen, kraal, stof, juweel, handgemaakt, hand-made, hobby,webshop, web, winkel, webwinkel, shop" />
+    <meta name="viewport" content="width=device-width, maximum-scale=3.0, user-scalable=yes" />
+    <link rel="icon" href="http://www.kokettekatinka.be/media/favicon/default/icon_Kokette-Katinka_2.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="http://www.kokettekatinka.be/media/favicon/default/icon_Kokette-Katinka_2.png" type="image/x-icon" />
+    <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" media="screen,print" href="/maintenance.css" />
+    <meta name="description" content="Wij verkopen kralen, stoffen en juwelen."/>
 </head>
-<body style="background-color: #ffff00">
+<body style="text-align: center;font-family:"Alef, Arial, Sans-serif, Helvetica"">
+<table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer"
+       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;
+       -webkit-text-size-adjust: 100%;border: 0; margin: auto">
+<tbody>
+<tr>
+    <td align="center" valign="top"
+        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+        <!-- BEGIN PREHEADER // -->
+        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templatePreheader"
+               style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;background-color: #FFFFFF;border-top: 0;border-bottom: 0;">
+            <tbody>
+            <tr>
+                <td valign="top" class="preheaderContainer"
+                    style="padding-top: 9px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock"
+                           style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <tbody class="mcnTextBlockOuter">
+                        <tr>
+                            <td valign="top" class="mcnTextBlockInner"
+                                style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
 
+                                <table align="left" border="0" cellpadding="0" cellspacing="0" width="366"
+                                       class="mcnTextContentContainer"
+                                       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                    <tbody>
+                                    <tr>
+
+                                        <td valign="top" class="mcnTextContent"
+                                            style="padding: 9px 0px 9px 18px;color: #000000;font-family: Alef,arial, 'Helvetica Neue', Helvetica, sans-serif;font-size: 16px;font-weight: normal;line-height: 100%;text-align: center;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+
+                                            <div style="text-align: left;"><span style="font-family:'Yanone Kaffeesatz', sans-serif'; font-size:18px">STOFFEN&nbsp;| KRALEN&nbsp;| JUWELEN</span>
+                                            </div>
+
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+
+
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <!-- // END PREHEADER -->
+    </td>
+</tr>
+<tr>
+    <td align="center" valign="top"
+        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+        <!-- BEGIN HEADER // -->
+        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateHeader"
+               style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;background-color: #FFFFFF;border-top: 0;border-bottom: 0;">
+            <tbody>
+            <tr>
+                <td valign="top" class="headerContainer"
+                    style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnImageBlock"
+                           style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <tbody class="mcnImageBlockOuter">
+                        <tr>
+                            <td valign="top"
+                                style="padding: 0px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"
+                                class="mcnImageBlockInner">
+                                <table align="left" width="100%" border="0" cellpadding="0" cellspacing="0"
+                                       class="mcnImageContentContainer"
+                                       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                    <tbody>
+                                    <tr>
+                                        <td class="mcnImageContent" valign="top"
+                                            style="padding-right: 0px;padding-left: 0px;padding-top: 0;padding-bottom: 0;text-align: center;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+
+
+                                            <img align="center" alt=""
+                                                 src="https://gallery.mailchimp.com/2085480954d2d38647fb705d4/images/Mailing_banner_boven_1_.png"
+                                                 width="600"
+                                                 style="max-width: 1000px;padding-bottom: 0;display: inline !important;vertical-align: bottom;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"
+                                                 class="mcnImage">
+
+
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <!-- // END HEADER -->
+    </td>
+</tr>
+<tr>
+    <td align="center" valign="top"
+        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+        <!-- BEGIN BODY // -->
+        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody"
+               style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;background-color: #FFFFFF;border-top: 0;border-bottom: 0;">
+            <tbody>
+            <tr>
+                <td valign="top" class="bodyContainer"
+                    style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock"
+                           style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <tbody class="mcnTextBlockOuter">
+                        <tr>
+                            <td valign="top" class="mcnTextBlockInner"
+                                style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+
+                                <table align="left" border="0" cellpadding="0" cellspacing="0" width="600"
+                                       class="mcnTextContentContainer"
+                                       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                    <tbody>
+                                    <tr>
+
+                                        <td valign="top" class="mcnTextContent"
+                                            style="padding: 9px 18px;color: #2A2769;line-height: 150%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: Alef, Helvetica;font-size: 15px;text-align: left;">
+
+                                            <br>
+                                            <h1>Welkom bij Kokette Katinka</h1>
+
+                                           
+<span>We zijn er even niet ... onze webshop wordt momenteel aangepast ... maar we zijn binnen enkele ogenblikken terug ... Beloofd!<br><br>
+
+
+                                        </td>
+                                    <tr>
+                                        <td style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                            <img  src="/media/maintenance/oorbellenrijtje-800px.jpg" width="100%">
+                                        </td>
+                                    </tr>
+                                    <tr>
+
+                                        <td valign="top" class="mcnTextContent"
+                                            style="padding: 9px 18px;color: #2A2769;line-height: 150%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: Alef, Helvetica;font-size: 15px;text-align: left;">
+                                            <br>
+                                            Misschien kan je ondertussen <a href="https://www.facebook.com/kokettekatinka">onze Facebook pagina</a> even bekijken? Je vind er steeds onze laatste nieuwtjes terug.
+                                        </td>
+
+                                    </tr>
+                                    </tr>
+                                    </tbody>
+                                </table>
+
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <!-- // END BODY -->
+    </td>
+</tr>
+<tr>
+    <td align="center" valign="top"
+        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+        <!-- BEGIN COLUMNS // -->
+
+        <!-- // END COLUMNS -->
+
+    </td>
+</tr>
+<tr>
+    <td align="center" valign="top"
+        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+        <!-- BEGIN FOOTER // -->
+        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateFooter"
+               style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;background-color: #FFFFFF;border-top: 0;border-bottom: 0;">
+            <tbody>
+            <tr>
+                <td valign="top" class="footerContainer"
+                    style="padding-bottom: 9px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnDividerBlock"
+                           style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <tbody class="mcnDividerBlockOuter">
+                        <tr>
+                            <td class="mcnDividerBlockInner"
+                                style="padding: 18px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                <table class="mcnDividerContent" border="0" cellpadding="0" cellspacing="0" width="100%"
+                                       style="border-top-width: 1px;border-top-style: solid;border-top-color: #999999;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                    <tbody>
+                                    <tr>
+                                        <td style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                            <span></span>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock"
+                           style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <tbody class="mcnTextBlockOuter">
+                        <tr>
+                            <td valign="top" class="mcnTextBlockInner"
+                                style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+
+                                <table align="left" border="0" cellpadding="0" cellspacing="0" width="600"
+                                       class="mcnTextContentContainer"
+                                       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                    <tbody>
+                                    <tr>
+
+                                        <td valign="top" class="mcnTextContent"
+                                            style="padding: 9px 18px;font-family: Alef,arial, 'Helvetica Neue', Helvetica, sans-serif;line-height: 150%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-size: 11px;text-align: left;">
+
+                            <span style="font-size:12px"><span
+                                    style="font-family:Alef,arial,helvetica neue,helvetica,sans-serif"><strong>Kokette
+                                Katinka</strong><br>
+Lombardenstraat 32<br>
+2000 Antwerpen<br>
+03 | 227 31 45<br>
+<a href="mailto:info@kokettekatinka.be" target="_blank"
+   style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-weight: normal;text-decoration: underline;">info@kokettekatinka.be</a><br>
+<a href="http://www.kokettekatinka.be" target="_blank"
+   style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-weight: normal;text-decoration: underline;">www.kokettekatinka.be</a><br>
+BTW BE0543.388.258<br>
+Astrid Witters
+<br>
+<br>
+                                Volg ons op <a href="http://www.facebook.com/kokettekatinka">Facebook</a> of <a href="https://plus.google.com/+KokettekatinkaBeAntwerpen">Google+</a>
+                                <br><br>
+Open op dinsdag van 11u tot 17u en van woensdag tot zaterdag van 11u tot 18u.<br>
+Zondag en maandag gesloten.</span></span><br>
+
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <!-- // END FOOTER -->
+    </td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
