script to import newsletter subscribers

--- a/KoketSite/tmp.html
+++ b/KoketSite/tmp.html
@@ -143,7 +143,9 @@ Je vindt Kokette Katinka zowel online als via de winkel in Antwerpen centrum." /
                                             <h1>Welkom bij Kokette Katinka</h1>
 
                                            
-<span>We zijn er even niet ... onze webshop wordt momenteel aangepast ... maar we zijn binnen enkele ogenblikken terug ... Beloofd!<br><br>
+<span>We zijn er even niet ...<br/>
+    We werken momenteel aan een vernieuwde betaalmodule ... <br/>
+    Maar we zijn binnen enkele ogenblikken terug ... Beloofd!<br><br>
 
 
                                         </td>
