twitter, translations, birthday, ..

--- a/KoketSite/print-receipt/receipt-footer.html
+++ b/KoketSite/print-receipt/receipt-footer.html
@@ -7,7 +7,7 @@
         <p>Te gebruiken in de winkel en op de site!</p>
         <hr>
         <p>Ruilen kan binnen de 14 dagen met geldig aankoopbewijs.</p>
-        <p>Afgeprijsde artikels en op maat geknipte artikels worden niet omgeruild.</p>
+        <p>Afgeprijsde artikelen en op maat geknipte artikelen worden niet omgeruild.</p>
         <hr>
         <p>Bedankt en tot de volgende keer.</p>
         <p>&nbsp;</p>
