--- a/KoketSite/tmp.html
+++ b/KoketSite/tmp.html
@@ -143,12 +143,13 @@ Je vindt Kokette Katinka zowel online als via de winkel in Antwerpen centrum." /
                                             <h1>Welkom bij Kokette Katinka</h1>
 
                                            
-<span>We zijn er even niet ...<br/>
-    We werken momenteel aan een vernieuwde betaalmodule ... <br/>
-    Maar we zijn binnen enkele ogenblikken terug ... Beloofd!<br><br>
+<p>We zijn er even niet ...<br/>
+    We werken momenteel aan het probleem ... <br/>
+    Maar we zijn binnen enkele ogenblikken terug ... Beloofd!<br><br></p>
 
 
                                         </td>
+                                    </tr>
                                     <tr>
                                         <td style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
                                             <img  src="/media/maintenance/oorbellenrijtje-800px.jpg" width="100%">
