--- a/KoketSite/print-receipt/receipt-header.html
+++ b/KoketSite/print-receipt/receipt-header.html
@@ -5,7 +5,7 @@
     <style>
         body {
             /*font-family: Myriad Pro Cond;*/
-            font-family: Tahoma;
+            font-family: Tahoma, sans-serif;
             /*font-family: DokChampa;*/
             /*font-family: "Shruti";*/
             font-size: 12px;
@@ -14,7 +14,7 @@
 
         h1 {
             margin: 14px 0px;
-            font-family: Myriad Pro Cond;
+            font-family: Myriad Pro Condensed, Helvetica, Verdana, sans-serif;
             font-weight: bold;
         }
 
@@ -80,7 +80,7 @@
         }
 
         .small {
-            font-family: Myriad Pro Cond;
+            font-family: Myriad Pro Condensed, Helvetica, Verdana;
             font-weight: bold;
             text-align: center;
         }
